# srd-builder

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-confi.yaml  .pre-commit-config.yaml  AGENTS.md  BLACKMOOR_HANDOFF.md  CONTRIBUTIN.md  CONTRIBUTING.md  CRUFT_AUDIT.md  LICENSE.md  Makefile  README.md  build_output.txt  discovery_report.json  pyproject.toml  table_metadata.json  tables.json  tables_raw.json
.github/workflows/: ci.yml
archive/: TODO.md
archive/dist_versions/: README.md
archive/docs/: AUTONOMOUS_SESSION_SUMMARY_2024-12-21.md  PARKING_LOT_2025-pre-v0.23.md  PROSE_EXTRACTION_FRAMEWORK.md
archive/planning_docs/: README.md  TABLE_MIGRATION_GUIDE.md  TABLE_MIGRATION_QUICK_REF.md  v0.8.3_equipment_plan.md
archive/v0.9.9_legacy_parsers/: README.md  text_table_parser.py
archive/v0.9.9_planning/: README.md  v0.9.9_EQUIPMENT_PLAN.md
docs/: ALIAS_IMPLEMENTATION.md  ALIAS_USAGE.md  ARCHITECTURE.md  BACKLOG.md  BLACKMOOR_COMPARISON.md  BLACKMOOR_HANDOFF.md  BUNDLE_README.md  COMPATIBILITY.md  CONSOLIDATION_PLAN.md  COVERAGE_ANALYSIS.md  DATA_DICTIONARY.md  EQUIPMENT_TABLE_BUGS.md  EXTRACTION_CHALLENGES.md  EXTRACTION_COMPARISON.md  Extraction_Solution_Plan.md  GEMINI_PHASE1_REVIEW.md  GEMINI_REVIEW_BRIEF.md  GPT_REVIEW_equipment_status.md  HANDOFF_v0.13.0.md  INTEGRATION.md  KNOWN_ISSUES.md  MONSTER_COUNT_INVESTIGATION.md  PARKING_LOT.md  PROVENANCE.md  REFERENCE_TABLES_INVESTIGATION.md  ROADMAP.md  SCHEMAS.md  SCHEMA_CHANGES.md  TODO.md  VERIFICATION_CHECKLIST.md  blackmoor_comparison.txt  quality_report_v0.3.3.txt  ruff_errors.txt  rules_dataset_plan.md  table_discovery_60-75.md  terminology.aliases.md  v0.15.0_MODULE_REORGANIZATION.md  v0.5.0_RELEASE_NOTES.md  v0.5.0_TODO.md  v0.8.3_equipment_plan.md  (+1 more)
docs/archive/: CONSOLIDATION_PLAN.md  Extraction_Solution_Plan.md  KNOWN_ISSUES.md  PHASE2_VICTORY.md
docs/audits/: srd-builder-forensic-audit-2026-06-20.md
docs/equipment_tables_plan/: collaborative_strategy_summary.md  gpt_action_plan.md  schema_compromise_recommendation.md  srd_equipment_strategic_plan.md  table_architecture_proposal.md  table_metadata_integration.md
docs/migration_v2.0.0/: README.md  aboleth_v1.5.0.json  aboleth_v2.0.0.json  adult_red_dragon_v1.5.0.json  adult_red_dragon_v2.0.0.json  goblin_v1.5.0.json  goblin_v2.0.0.json
docs/planning/: ENGINE_BASED_POSTPROCESS.md  condition_extraction_fix.md  v0.15.1_SPELL_REFACTORING.md  v0.15_DESCRIPTION_ARRAYS.md  v0.16.0_MAGIC_ITEMS.md  v0.19.0_PLAN.md
docs/reference/: phase1_findings.md  reference_summary.json
docs/releases/: MIGRATION_v0.18.1_to_v0.37.0.md  v0.15.0_MODULE_REORGANIZATION.md  v0.15.1_RELEASE_NOTES.md  v0.15.1_SPELL_REFACTORING.md  v0.15.2_MONSTER_REFACTORING.md  v0.16.0_RELEASE_NOTES.md  v0.17.0_Release_Notes.md  v0.18.0_RELEASE_NOTES.md  v0.18.1_RELEASE_NOTES.md  v0.19.0.md  v0.19.1.md  v0.19.2.md  v0.19.3.md  v0.19.4.md  v0.20.0.md  v0.24.0.md  v0.25.0.md  v0.26.0.md  v0.26.1.md  v0.26.2.md  v0.27.0.md  v0.27.1.md  v0.27.2.md  v0.27.3.md  v0.27.4.md  v0.27.5.md  v0.27.6.md  v0.27.7.md  v0.8.3_to_v0.13.0_CHANGELOG.md
docs/reports/: ENGINE_ASSESSMENT.md  SESSION_CHECKPOINT_2024_12_22.md  SPELL_BUG_ANALYSIS.md  SPELL_BUG_RESOLUTION.md  api_comparison_analysis_cluade.md  api_comparison_analysis_gemini.md  api_comparison_analysis_gpt.md  api_recommendations_claude.md  blackmoor_srd_builder_v0.37.0_integration_review.md  dependency_update_plan.md  equipment_pack_integrity_fix.md  reddit_announcement_framing.md  spell_description_fix_investigation.md  srd_builder_v1_roadmap_proposal_claude.md  v0.13.0_repo_analysis_report.md  v0.17.0_audit_report_gemini.md  v0.18.0_CLEANUP_REPORT.md
docs/templates/: TEMPLATE_equipment.json  TEMPLATE_lineage.json  TEMPLATE_monster.json  TEMPLATE_spell.json  TEMPLATE_table.json
rulesets/srd_5_1/: magic_items.json
schemas/: ability_score.schema.json  build_report.schema.json  class.schema.json  condition.schema.json  disease.schema.json  equipment.schema.json  features.schema.json  lineage.schema.json  madness.schema.json  magic_item.schema.json  monster.schema.json  poison.schema.json  raw_monster.schema.json  rule.schema.json  spell.schema.json  table.schema.json  weapon_property.schema.json
schemas/exemplars/: ability_score.exemplar.json  class.exemplar.json  condition.exemplar.json  damage_type.exemplar.json  disease.exemplar.json  equipment.exemplar.json  features.exemplar.json  (+7 more)
scripts/: analyze_header_patterns.py  analyze_reference.py  audit_dataset_quality.py  build_pdf_toc.py  bump_version.py  cleanup_cruft.sh  compare_with_blackmoor.py  count_monsters_in_pdf.py  coverage_report.py  debug_condition_order.py  extract_prose_sections.py  generate_data_dictionary.py  generate_exemplars.py  investigate_spell_structure.py  package_bundle.sh  quality_report.py  rebuild_dist_archives.sh  release_check.sh  smoke.sh  spell_investigation_results.json  sync_doc_tables.py  table_targets.py  validate_spell_classes.py  validate_table_counts.py
tests/: conftest.py  test_ability_modifiers.py  test_audit_dataset_quality.py  test_build_pipeline.py  test_bundle_json_format_stability.py  test_canonical_spell_slots.py  test_class_progressions.py  test_conditions_golden.py  test_context_tracker.py  test_cross_reference_indexes.py  test_dataset_completeness.py  test_engine_postprocess.py  test_equipment_extended_provenance.py  test_equipment_packs.py  test_exemplars_validate.py  test_extract_basic.py  test_extract_classes.py  test_extract_cross_page.py  test_extract_equipment.py  test_extract_equipment_descriptions.py  test_extract_features.py  test_extract_lineages.py  test_extract_magic_items.py  test_extract_monsters.py  test_extract_pdf_metadata.py  test_extract_rules.py  test_extract_spell_classes.py  test_extract_spells.py  test_fixtures_monsters.py  test_golden_ability_scores.py  test_golden_classes.py  test_golden_conditions.py  test_golden_damage_types.py  test_golden_diseases.py  test_golden_equipment.py  test_golden_features.py  test_golden_lineages.py  test_golden_magic_items.py  test_golden_monsters.py  test_golden_poisons.py  (+42 more)
(+409 files in other folders)
