[project]
name = "srd-builder"
version = "0.5.0"
description = "Reproducible pipeline for extracting and normalizing SRD rulebooks (5.1 → 5.2.1 and beyond)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Ken Hillier", email = "wolftales@example.com" }
]
keywords = ["srd", "dnd", "pathfinder", "ogl", "orc", "parser", "pdf", "json", "ruleset"]
dependencies = [
  "pymupdf>=1.23.7",
  "pypdf>=3.9.0",
  "camelot-py[cv]>=0.11.0",
  "orjson>=3.10.7",
  "python-slugify>=8.0.4",
  "jsonschema>=4.23.0"
]

[project.urls]
Homepage = "https://github.com/wolftales/srd-builder"
Documentation = "https://github.com/wolftales/srd-builder#readme"
Issues = "https://github.com/wolftales/srd-builder/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "ruff>=0.6.9",
  "black>=24.10.0",
  "isort>=5.13.2",
  "mypy>=1.13.0",
  "pre-commit>=4.0.1"
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["srd_builder"]

[tool.ruff]
line-length = 100
target-version = "py310"
fix = true

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "N", "W", "PL"]
ignore = [
    "E203",  # compatible with Black slicing
    "E501",  # line length handled by Black
    "C901",  # complex functions in extraction code are acceptable
]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
strict = false
warn_unused_ignores = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-q"
markers = [
    "package: tests that require a built package in dist/ (run after 'make output')",
]
filterwarnings = [
    # Suppress PyMuPDF SWIG binding deprecation warnings
    "ignore::DeprecationWarning:importlib._bootstrap",
    "ignore:builtin type.*has no __module__ attribute:DeprecationWarning",
]
