[project]
name = "srd-builder"
version = "0.5.0"
description = "Reproducible pipeline for extracting and normalizing SRD rulebooks (5.1 → 5.2.1 and beyond)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Ken Hillier", email = "wolftales@example.com" }
]
keywords = ["srd", "dnd", "pathfinder", "ogl", "orc", "parser", "pdf", "json", "ruleset"]
dependencies = [
  "pymupdf>=1.23.7",
  "pypdf>=3.9.0",
  "camelot-py[cv]>=0.11.0",
  "orjson>=3.10.7",
  "python-slugify>=8.0.4",
  "jsonschema>=4.23.0"
]

[project.urls]
Homepage = "https://github.com/wolftales/srd-builder"
Documentation = "https://github.com/wolftales/srd-builder#readme"
Issues = "https://github.com/wolftales/srd-builder/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "ruff>=0.6.9",
  "mypy>=1.13.0",
  "pre-commit>=4.0.1"
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["srd_builder"]

[tool.ruff]
line-length = 100
target-version = "py311"
fix = true

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "N", "W", "PL"]
ignore = [
    "E203",  # compatible with Black slicing
    "E501",  # line length handled by Black
    "PLR2004",  # Magic value comparisons - TODO: fix gradually
    "PLC0415",  # Import not at top-level - scripts use dynamic imports intentionally
]

[tool.ruff.lint.pylint]
max-branches = 50  # Complex parsing functions have legitimate branching (e.g., parse_monster_from_blocks: 46)
max-returns = 25  # Router functions may have many returns (e.g., _extract_manual: 23)
max-statements = 160  # Large parsing functions legitimately complex (e.g., parse_monster_from_blocks: 159)
max-args = 10  # Some builder functions need many parameters (e.g., generate_meta_json: 10)

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.11"
strict = false
warn_unused_ignores = true
disallow_untyped_defs = false
ignore_missing_imports = true
explicit_package_bases = true
mypy_path = "$MYPY_CONFIG_FILE_DIR/src"
exclude = ["^scripts/", "^tests/"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-q"
markers = [
    "package: tests that require a built package in dist/ (run after 'make output')",
]
filterwarnings = [
    # Suppress PyMuPDF SWIG binding deprecation warnings
    "ignore::DeprecationWarning:importlib._bootstrap",
    "ignore:builtin type.*has no __module__ attribute:DeprecationWarning",
]
